dev/backoffice-bff/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backoffice-bff
  namespace: yas-dev
  labels:
    app: backoffice-bff
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backoffice-bff
  template:
    metadata:
      labels:
        app: backoffice-bff
    spec:
      containers:
      - name: backoffice-bff
        image: ghcr.io/nashtech-garage/yas-backoffice-bff:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 256Mi
            cpu: 100m
          limits:
            memory: 512Mi
            cpu: 500m
