dev/backoffice-bff/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backoffice-bff
  namespace: yas-dev
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: backoffice.yas.local.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: backoffice-bff
            port:
              number: 80
